--- a/lesson15.html
+++ b/lesson15.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 15 - Simple Calculator Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
