--- a/lesson32.html
+++ b/lesson32.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lesson 32 - Automated File Backup</title>
 <link rel="stylesheet" href="style.css">
 </head>
