--- a/lesson51.html
+++ b/lesson51.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lesson 51 - Password Manager</title>
 <link rel="stylesheet" href="style.css">
 </head>
