--- a/lesson59.html
+++ b/lesson59.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="viewport" content="device=device-width, initial-scale=1.0">
 <title>Lesson 59 - Network Device Check</title>
 <link rel="stylesheet" href="style.css">
 </head>
