--- a/lesson4.html
+++ b/lesson4.html
@@ -26,6 +26,7 @@ python hello.py
     </code>
 
     <p>If you see the message, congratulations 🎉</p>
+    <a href="lesson5.html">Next Lesson →</a>
 </main>
 
 <footer>
