--- a/lesson15.html
+++ b/lesson15.html
@@ -20,6 +20,7 @@ print("Product:", num1 * num2)
     </code>
 
     <p>Congratulations 🎉 You’ve completed the Python basics!</p>
+    <a href="lesson16.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
