--- a/lesson25.html
+++ b/lesson25.html
@@ -20,6 +20,7 @@ else:<br>
 </code>
 
 <p>This project introduces real-world security thinking.</p>
+  <a href="lesson26.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
