--- a/lesson30.html
+++ b/lesson30.html
@@ -25,6 +25,7 @@ Log analysis is a core cyber security skill.
 </p>
 
 <p><strong>🎉 You have completed Python for Cyber Security (Basics)</strong></p>
+<a href="lesson31.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
