--- a/lesson35.html
+++ b/lesson35.html
@@ -26,6 +26,7 @@ Automation helps security teams respond faster.
 </p>
 
 <p><strong>🎉 Automation Security Basics Completed</strong></p>
+      <a href="lesson36.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
