--- a/lesson40.html
+++ b/lesson40.html
@@ -27,6 +27,7 @@ This introduces network monitoring and helps understand traffic flow.
 </p>
 
 <p><strong>🎉 Python Networking Basics Completed</strong></p>
+      <a href="lesson41.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
