--- a/lesson45.html
+++ b/lesson45.html
@@ -29,6 +29,7 @@ This teaches the habit of reporting and fixing vulnerabilities responsibly.
 </p>
 
 <p><strong>🎉 You’ve completed Vulnerability Scanning Basics</strong></p>
+      <a href="lesson46.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
