--- a/lesson50.html
+++ b/lesson50.html
@@ -24,6 +24,7 @@ To practice ethical hacking effectively:
 </ul>
 
 <p><strong>🎉 Congratulations! You’ve completed the Ethical Hacking Mindset & Methodology section.</strong></p>
+<a href="lesson51.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
