--- a/lesson55.html
+++ b/lesson55.html
@@ -32,6 +32,7 @@ else:<br>
 </code>
 
 <p>🎉 This completes the Mini Projects section.</p>
+      <a href="lesson56.html">Next Lesson →</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
