--- a/lesson70.html
+++ b/lesson70.html
@@ -30,6 +30,7 @@ else: print("Invalid option")
 </code>
 
 <p>🎉 Congratulations! You’ve completed the **full Python + Cyber Security course** (Lessons 1–70).</p>
+<a href="index.html">Home</a>
 </main>
 
 <footer><p>© Yusufmtech.com</p></footer>
